# BithumbWS

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.cpp  ws_connection_test.py
Requests/: BithumbFetcher.cpp  BithumbFetcher.h  ProxyManager.cpp  ProxyManager.h  TokenParser.cpp  TokenParser.h
Server/: WsBroadcastServer.cpp  WsBroadcastServer.h  WsListener.cpp  WsListener.h  WsSession.cpp  WsSession.h  WsSharedState.cpp  WsSharedState.h
cmake/linux/: CMakeLists.txt
cmake/win/: CMakeLists.txt
cookies/: cookies_thread_5.txt
